--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,29 @@
-name: Robot Builder
+name: Deploy to GitHub Pages
+
 on:
   push:
-    branches:
-      - main
-      - master
+    branches: [main]
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      # Step 1: Robot grabs your LEGO bricks (code)
-      - name: 1. Get latest code
-        uses: actions/checkout@v4
-      # Step 2: Robot installs the tools needed to build
-      - name: 2. Install Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '20'
-      # Step 3: Robot builds the castle (turns code into a website)
-      - name: 3. Build the Website
-        run: |
-          npm install
-          npm run build
-      # Step 4: Robot puts the castle in Hostinger
-      - name: 4. Upload to Hostinger
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+          node-version: 20
+      - run: npm install
+      - run: npm run build
+      - uses: actions/upload-pages-artifact@v3
         with:
-          server: ${{ secrets.FTP_SERVER }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./dist/
-          server-dir: /domains/grey-rail-144479.hostingersite.com/public_html/
+          path: dist
+      - id: deployment
+        uses: actions/deploy-pages@v4
